--- a/css/style.css
+++ b/css/style.css
@@ -180,20 +180,18 @@
     .heroSection {
         position: fixed;
         height: 100vh;
-        width: 100%;
         top: 0;
         bottom: 0;
         right: 0;
-        left: 0;
+        left: 25%;
         background-color: #101010;
-        overflow: hidden;
     }
 
     .heroImage {
         width: 100%;
         height: 100%;
+        aspect-ratio: 1.5;
         object-fit: cover;
-        object-position: center;
     }
 
     .heroShadow{
@@ -243,7 +241,7 @@
     .navbar {
         right: 0;
         left: 0;
-        position: fixed;
+        position: absolute;
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 5%;
@@ -251,7 +249,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        z-index: 99;
     }
 
     .navbarLogo {
@@ -609,9 +606,8 @@
 
 @media all and (max-width: 767px) {
     .heroSection {
-        left: 0;
+        left: 0%;
         right: 0;
-        width: 100%;
     }
 
     .heroImage {
@@ -651,7 +647,7 @@
     }
 
     .navbar {
-        padding-left: 10px;
+        padding-left: 9%;
     }
 
     .navbarMenu {
