--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,9 @@
         padding-left: 2rem;
         padding-right: 2rem;
         background-color: #101010;
+        overflow: hidden;  /* Aggiunto per prevenire lo scrolling orizzontale */
+        width: 100%;      /* Assicura che il contenitore occupi tutta la larghezza */
+        position: relative; /* Per il corretto posizionamento dei figli */
     }
 
     .heroSection {
@@ -185,6 +188,7 @@
         right: 0;
         left: 25%;
         background-color: #101010;
+        overflow: hidden;  /* Aggiunto per contenere l'immagine */
     }
 
     .heroImage {
@@ -606,14 +610,17 @@
 
 @media all and (max-width: 767px) {
     .heroSection {
-        left: 0%;
+        left: 0;
         right: 0;
+        overflow: hidden;
     }
 
     .heroImage {
         height: 100%;
         object-fit: cover;
         aspect-ratio: 1;
+        width: 100vw;  /* Forza la larghezza al viewport */
+        max-width: 100vw;  /* Impedisce il superamento della larghezza del viewport */
     }
 
     .heroShadow {
