--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,20 @@
     .story2Text {
         margin-left: 1.5rem;
     }
+
+    .heroSection {
+        left: 0;
+        right: 0;
+        overflow: hidden;
+    }
+
+    .heroImage {
+        height: 100%;
+        object-fit: cover;
+        aspect-ratio: 1;
+        width: 100vw;
+        max-width: 100vw;
+    }
 }
 
 @media all and (max-width: 767px) {
