--- a/css/styleContacts.css
+++ b/css/styleContacts.css
@@ -6,7 +6,7 @@
 /* CONTACTS PAGE */
 .contacts-content {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     position: fixed;
 }
@@ -15,7 +15,7 @@
 .contacts-left,
 .contacts-right {
     flex: 1;
-    height: 100vh;
+    height: 100dvh;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
@@ -30,7 +30,7 @@
 
 .contact-image-container {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     position: relative;
     overflow: hidden;
     border-radius: 8px;
@@ -54,7 +54,7 @@
 }
 
 .contacts-right-scroll {
-    height: 100vh;
+    height: 100dvh;
     overflow-y: auto;
     box-sizing: border-box;
     overscroll-behavior: contain;
