--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -105,7 +105,7 @@ body {
 .homeContent {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
     background-color: #101010;
 }
@@ -244,7 +244,7 @@ body {
 
 /* SIDE MENU */
 .side-menu {
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     position: fixed;
     z-index: 999;
