--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -262,7 +262,7 @@ body {
 .side-menu a {
     padding: 20px;
     text-decoration: none;
-    font-size: 28px;
+    font-size: 40px;
     color: #e7e5e4;
     display: block;
     transition: 0.3s;
@@ -594,8 +594,9 @@ body {
         font-size: 2.45em;
         line-height: .5;
     }
-
-
+    .side-menu a {
+        font-size: 30px;
+    }
     .navbarMenu {
         width: 2rem;
         height: 2rem;
