--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -347,7 +347,7 @@ body {
     line-height: 1.25;
     font-weight: 600;
     font-size: 2.8em;
-    font-family: Great Vibes, sans-serif;
+    font-family: "Satisfy", serif;
     color: #d2b758;
 }
 
@@ -404,7 +404,7 @@ body {
 
 .storyInnerTitle, .story2InnerTitle {
     line-height: 1;
-    font-family: Great Vibes, sans-serif;
+    font-family: "Satisfy", serif;
     color: #d2b758;
     font-size: 1.5em;
 }
