--- a/css/styleIndex.css
+++ b/css/styleIndex.css
@@ -1,3 +1,36 @@
+/* Font faces */
+@font-face {
+    font-family: 'DM Sans';
+    src: url('../fonts/DMSans-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url('../fonts/DMSans-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DM Sans';
+    src: url('../fonts/DMSans-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Satisfy';
+    src: url('../fonts/Satisfy-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 /* GENERAL SETTINGS */
 html {
     scroll-behavior: smooth;
@@ -530,6 +563,7 @@ body {
 /* MEDIA QUERIES */
 @media (max-width: 1440px) {
     .heroTitleImage { max-width: 30%; }
+    .navbar {background: linear-gradient(to bottom, rgba(18, 18, 18) 0%, rgba(0,0,0,0) 100%);}
     .navbarLogo { width: 80px; height: 80px; }
     .navbarMenu, .side-menu .close-btn { height: 2rem; }
     .aboutInnerBoxTitle {
