--- a/css/styleContacts.css
+++ b/css/styleContacts.css
@@ -1,8 +1,8 @@
 /* Font faces */
 @font-face {
     font-family: 'DM Sans';
-    src: url('fonts/dm-sans/DMSans-Regular.woff2') format('woff2'),
-         url('fonts/dm-sans/DMSans-Regular.woff') format('woff');
+    src: url('../fonts/dm-sans/DMSans-Regular.woff2') format('woff2'),
+         url('../fonts/dm-sans/DMSans-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -10,8 +10,8 @@
 
 @font-face {
     font-family: 'DM Sans';
-    src: url('fonts/dm-sans/DMSans-Medium.woff2') format('woff2'),
-         url('fonts/dm-sans/DMSans-Medium.woff') format('woff');
+    src: url('../fonts/dm-sans/DMSans-Medium.woff2') format('woff2'),
+         url('../fonts/dm-sans/DMSans-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -19,8 +19,8 @@
 
 @font-face {
     font-family: 'DM Sans';
-    src: url('fonts/dm-sans/DMSans-Bold.woff2') format('woff2'),
-         url('fonts/dm-sans/DMSans-Bold.woff') format('woff');
+    src: url('../fonts/dm-sans/DMSans-Bold.woff2') format('woff2'),
+         url('../fonts/dm-sans/DMSans-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -28,8 +28,8 @@
 
 @font-face {
     font-family: 'Satisfy';
-    src: url('fonts/satisfy/Satisfy-Regular.woff2') format('woff2'),
-         url('fonts/satisfy/Satisfy-Regular.woff') format('woff');
+    src: url('../fonts/satisfy/Satisfy-Regular.woff2') format('woff2'),
+         url('../fonts/satisfy/Satisfy-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
